--- a/requirements.txt
+++ b/requirements.txt
@@ -2,16 +2,17 @@ cs50==5.0.4
 dlib==19.20.0
 face-recognition==1.3.0
 face-recognition-models==0.3.0
-flash==1.0.3
 Flask==1.1.2
 gunicorn==20.0.4
 itsdangerous==1.1.0
-jedi==0.13.2
 Jinja2==2.11.2
+multidict==4.7.6
 numpy==1.16.2
-opencv-contrib-python==4.2.0.34
+opencv-python==4.1.1.26
+picamera==1.13
 Pillow==7.2.0
 requests==2.21.0
 SQLAlchemy==1.3.18
 sqlparse==0.3.1
-urllib3==1.24.1
+telepot==12.7
+urllib3==1.25.9
