--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,46 @@
+aiohttp==3.6.2
+asn1crypto==0.24.0
+async-timeout==3.0.1
+attrs==19.3.0
+certifi==2018.8.24
+chardet==3.0.4
+click==7.1.2
+cryptography==2.6.1
 cs50==5.0.4
 dlib==19.20.0
+entrypoints==0.3
 face-recognition==1.3.0
 face-recognition-models==0.3.0
 Flask==1.1.2
 gunicorn==20.0.4
+idna==2.6
 itsdangerous==1.1.0
 Jinja2==2.11.2
+keyring==17.1.1
+keyrings.alt==3.1.1
+MarkupSafe==1.1.1
 multidict==4.7.6
 numpy==1.16.2
+opencv-contrib-python==4.1.1.26
 opencv-python==4.1.1.26
+opencv-python-headless==4.1.1.26
 picamera==1.13
 Pillow==7.2.0
+pycrypto==2.6.1
+PyGObject==3.30.4
+pyRFC3339==1.1
+python-apt==1.8.4.1
+pytz==2020.1
+pyxdg==0.25
 requests==2.21.0
+SecretStorage==2.3.1
+six==1.12.0
 SQLAlchemy==1.3.18
 sqlparse==0.3.1
+ssh-import-id==5.7
 telepot==12.7
+termcolor==1.1.0
 urllib3==1.25.9
+virtualenv==15.1.0
+Werkzeug==1.0.1
+yarl==1.4.2
