--- a/requirements.txt
+++ b/requirements.txt
@@ -29,10 +29,15 @@ Pillow==7.2.0
 PyGObject==3.30.4
 pyRFC3339==1.1
 pytz==2020.1
+requests==2.21.0
 SecretStorage==2.3.1
 six==1.12.0
 SQLAlchemy==1.3.18
 sqlparse==0.3.1
+ssh-import-id==5.7
 telepot==12.7
 termcolor==1.1.0
 urllib3==1.25.9
+virtualenv==15.1.0
+Werkzeug==1.0.1
+yarl==1.4.2
