--- a/services/gunicorn.service
+++ b/services/gunicorn.service
@@ -6,7 +6,7 @@ After=network.target
 User=pi
 WorkingDirectory=/home/pi/RPi-face-recognition
 ExecStart=/home/pi/.local/bin/gunicorn app:app -b 0.0.0.0 --reload
-Restart=never
+Restart=always
 
 [Install]
 WantedBy=multi-user.target
