--- a/services/keypad.service
+++ b/services/keypad.service
@@ -6,7 +6,7 @@ After=network.target
 User=pi
 WorkingDirectory=/home/pi/RPi-face-recognition
 ExecStart=python3 keypad.py
-Restart=never
+Restart=always
 
 [Install]
 WantedBy=multi-user.target
