--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 aiohttp==3.6.2
+appdirs==1.4.4
 asn1crypto==0.24.0
 async-timeout==3.0.1
 attrs==19.3.0
@@ -7,29 +8,32 @@ chardet==3.0.4
 click==7.1.2
 cryptography==2.6.1
 cs50==5.0.4
+distlib==0.3.1
 dlib==19.20.0
 entrypoints==0.3
 face-recognition==1.3.0
 face-recognition-models==0.3.0
+filelock==3.0.12
 Flask==1.1.2
 gunicorn==20.0.4
 idna==2.6
+importlib-metadata==1.7.0
 itsdangerous==1.1.0
 Jinja2==2.11.2
 keyring==17.1.1
 keyrings.alt==3.1.1
 MarkupSafe==1.1.1
 multidict==4.7.6
-numpy==1.16.2
-opencv-contrib-python==4.1.1.26
-opencv-python==4.1.1.26
-opencv-python-headless==4.1.1.26
+numpy==1.19.1
 picamera==1.13
 Pillow==7.2.0
+pip-tools==5.3.1
+pycrypto==2.6.1
 PyGObject==3.30.4
-pyRFC3339==1.1
-pytz==2020.1
+python-apt==1.8.4.1
+pyxdg==0.25
 requests==2.21.0
+RPi.GPIO==0.7.0
 SecretStorage==2.3.1
 six==1.12.0
 SQLAlchemy==1.3.18
@@ -37,7 +41,9 @@ sqlparse==0.3.1
 ssh-import-id==5.7
 telepot==12.7
 termcolor==1.1.0
-urllib3==1.25.9
-virtualenv==15.1.0
+typing-extensions==3.7.4.2
+urllib3==1.24.1
+virtualenv==20.0.30
 Werkzeug==1.0.1
-yarl==1.4.2
+yarl==1.5.1
+zipp==3.1.0
