moved "ready" signal to run once rather than with evey worker

--- a/services/gunicorn.service
+++ b/services/gunicorn.service
@@ -5,7 +5,7 @@ After=network.target
 [Service]
 User=pi
 WorkingDirectory=/home/pi/RPi-face-recognition
-ExecStart=/home/pi/.local/bin/gunicorn app:app -b 0.0.0.0 --reload
+ExecStart=/home/pi/.local/bin/gunicorn app:app -c configs/gunicorn.py --reload
 Restart=always
 
 [Install]
